# mc_rtc-raylib

./: .clang-format-common.sh  .gitmodules  CMakeLists.txt  Camera.cpp  Camera.h  Client.cpp  Client.h  InteractiveMarker.cpp  InteractiveMarker.h  LogSink.h  README.md  RobotModel.cpp  RobotModel.h  SceneState.cpp  SceneState.h  help.cpp  help.h  icon.png.h  imgui_impl_raylib.cpp  imgui_impl_raylib.h  index.html  main.cpp  r3d.c  utils.cpp  utils.h  win32_defs.h
etc/: EndEffector.yaml  mc_rtc.yaml
utils/: server.py
widgets/: ArrayInput.h  ArrayLabel.h  Arrow.h  Button.h  Category.cpp  Category.h  Checkbox.h  ComboInput.h  DataComboInput.h  Form.h  IntegerInput.h  Label.h  NumberInput.h  NumberSlider.h  Point3D.cpp  Point3D.h  Polygon.h  Robot.cpp  Robot.h  Rotation.h  Schema.cpp  Schema.h  SingleInput.h  StringInput.h  Trajectory.h  Transform.h  Widget.h  XYTheta.h
widgets/details/: TransformBase.h
widgets/form/: schema.cpp  schema.h  widgets.cpp  widgets.h
